@@ -1,3 +1,3 @@
-#sid jessie sid-oracle saucy trusty utopic#9
+#sid jessie sid-oracle trusty utopic vivid#9
 #wheezy jessie#8
 #precise#7
